--- a/package.json
+++ b/package.json
@@ -34,26 +34,27 @@
   "author": "scw",
   "license": "ISC",
   "dependencies": {
-    "vue": "~3.5.13",
-    "swico": "2.3.0"
+    "swico": "2.5.0",
+    "vue": "~3.5.23"
   },
   "devDependencies": {
-    "autoprefixer": "10.3.7",
-    "@types/node": "22.14.1",
-    "globals": "16.0.0",
-    "eslint": "9.24.0",
-    "eslint-plugin-vue": "10.0.0",
-    "vue-eslint-parser": "10.1.3",
-    "typescript-eslint": "8.30.1",
-    "@eslint/js": "9.24.0",
-    "prettier": "3.5.3",
-    "typescript": "5.8.3",
-    "cross-env": "7.0.3",
-    "husky": "9.0.10",
     "@commitlint/cli": "18.5.0",
     "@commitlint/config-conventional": "18.5.0",
+    "@eslint/js": "9.24.0",
+    "@rspack/core": "1.6.1",
+    "@types/node": "22.14.1",
+    "autoprefixer": "10.3.7",
+    "cross-env": "7.0.3",
+    "eslint": "9.24.0",
+    "eslint-plugin-vue": "10.0.0",
+    "globals": "16.0.0",
+    "husky": "9.0.10",
     "lint-staged": "15.2.1",
-    "@rspack/core": "1.5.6"
+    "naive-ui": "^2.43.1",
+    "prettier": "3.5.3",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.30.1",
+    "vue-eslint-parser": "10.1.3"
   },
   "engines": {
     "node": ">=20.0.0"
