--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "url": "https://github.com/scw1997/swico.git"
   },
   "keywords": [
-    "swico-template-vue",
     "swico",
     "typescript",
     "vue",
@@ -35,8 +34,10 @@
   "license": "ISC",
   "dependencies": {
     "swico": "2.5.0",
-    "vue": "~3.5.23"
+    "vue": "~3.5.23",
+    "naive-ui": "^2.43.1"
   },
+  "packageManager": "pnpm@10.6.0",
   "devDependencies": {
     "@commitlint/cli": "18.5.0",
     "@commitlint/config-conventional": "18.5.0",
@@ -50,7 +51,6 @@
     "globals": "16.0.0",
     "husky": "9.0.10",
     "lint-staged": "15.2.1",
-    "naive-ui": "^2.43.1",
     "prettier": "3.5.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.30.1",
