--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "prettier": "3.5.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.30.1",
-    "vue-eslint-parser": "10.1.3"
+    "vue-eslint-parser": "10.1.3",
+    "postcss-plugin-px2rem": "~0.8.1"
   },
   "engines": {
     "node": ">=20.0.0"
