--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     //不生成输出文件。
     "jsx": "preserve",
     //在 .tsx文件里支持JSX
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "baseUrl": "./",
     "paths": {
       //模块名到基于 baseUrl的路径映射的列表，类似webpack的alias
@@ -56,6 +56,7 @@
     "node_modules"
   ],
   "include": [
-    "src"
+    "src",
+    "config"
   ]
 }
