--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@vicons/fa": "^0.13.0",
     "naive-ui": "^2.43.1",
-    "swico": "2.7.1-beta.1",
+    "swico": "2.8.0",
     "vue": "~3.5.23"
   },
   "packageManager": "pnpm@10.6.0",
