--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "license": "ISC",
   "dependencies": {
     "@vicons/fa": "^0.13.0",
-    "naive-ui": "^2.43.1",
     "swico": "2.8.0",
     "vue": "~3.5.23"
   },
@@ -52,11 +51,11 @@
     "globals": "16.0.0",
     "husky": "9.0.10",
     "lint-staged": "15.2.1",
+    "postcss-plugin-px2rem": "~0.8.1",
     "prettier": "3.5.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.30.1",
-    "vue-eslint-parser": "10.1.3",
-    "postcss-plugin-px2rem": "~0.8.1"
+    "vue-eslint-parser": "10.1.3"
   },
   "engines": {
     "node": ">=20.0.0"
