--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "license": "ISC",
   "dependencies": {
     "@vicons/fa": "^0.13.0",
-    "swico": "2.9.0-beta.4",
+    "swico": "2.9.0",
     "vue": "~3.5.23"
   },
   "packageManager": "pnpm@10.6.0",
